--- a/experiment_caltech_amazon.ipynb
+++ b/experiment_caltech_amazon.ipynb
@@ -100,9 +100,9 @@
     "                         std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
-    "caltech_db = torchvision.datasets.ImageFolder(root='C:\\\\Users\\\\yanis\\\\OneDrive\\\\Documents\\\\ENSAE 3A\\\\OT\\\\projet\\\\images\\\\caltech10', transform=transform)\n",
+    "caltech_db = torchvision.datasets.ImageFolder(root='C:\\\\Users\\\\yanis\\\\OneDrive\\\\Documents\\\\ENSAE 3A\\\\OT\\\\Project-Optimal-Transport\\\\images\\\\caltech10', transform=transform)\n",
     "print(caltech_db.class_to_idx)\n",
-    "amazon_db = torchvision.datasets.ImageFolder(root='C:\\\\Users\\\\yanis\\\\OneDrive\\\\Documents\\\\ENSAE 3A\\\\OT\\\\projet\\\\images\\\\amazon', transform=transform)\n",
+    "amazon_db = torchvision.datasets.ImageFolder(root='C:\\\\Users\\\\yanis\\\\OneDrive\\\\Documents\\\\ENSAE 3A\\\\OT\\\\Project-Optimal-Transport\\\\images\\\\amazon', transform=transform)\n",
     "print(amazon_db.class_to_idx)"
    ]
   },
